--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,5 +14,5 @@ install:
 
 
 build_script:
-  - gradlew test -Dselenide.headless=true
-  - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
+  - chmod +x gradlew
+  - ./gradlew test --info  -Dselenide.headless=true
